* Mon Aug 01 2016 Nicholas Hughes <nicholasmhughes@gmail.com> - 4.1.3-0
- Fixed incorrect variable references in ldap.erb.

* Sat Mar 19 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.2-0
- Migrated use_simp_pki to a global catalyst.

* Mon Mar 14 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.1-0
- Moved to Semantic Versioning 2.0
- Fixed a bug in the LDAP provider where we had
  `ldap_chpass_updates_last_change` as well as
  `ldap_chpass_update_last_change`. These were consolidated into a correct
  single `ldap_chpass_update_last_change` Boolean.
- Removed RPM dependencies on 'simp-boostrap' and 'puppet' since these are
  technically not necessary for just installing the module.

* Tue Mar 01 2016 Ralph Wright <ralph.wright@onyxpoint.com> - 4.1.0-9
- Added compliance function support

* Thu Dec 24 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-8
- Added an sssd::install::client class for installing only the client
  libraries.

* Mon Nov 09 2015 Chris Tessmer <chris.tessmer@onypoint.com> - 4.1.0-7
- migration to simplib and simpcat (lib/ only)

* Thu Apr 02 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-7
- Fixed variable references in some templates.

* Thu Feb 19 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-6
- Migrated to the new 'simp' environment.

* Fri Jan 16 2015 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-4
- Changed puppet-server requirement to puppet

* Thu Nov 06 2014 Chris Tessmer <ctessmer@onyxpoint.com> - 4.1.0-3
- Remove sssd::conf as it is no longer needed and causes duplicate
  concat_fragment error

* Fri Oct 17 2014 Trevor Vaughan <tvaughan@onyxpoint.com> - 4.1.0-2
- CVE-2014-3566: Updated cipher suites to help mitigate POODLE.

- The tls_cipher_suite variable is set to HIGH:-SSLv2 because OpenLDAP
  cannot set the SSL provider natively. By default, it will run TLSv1
  but cannot handle TLSv1.2 therefore the SSLv3 ciphers cannot be
  eliminated. Take care to ensure that your clients only connect with