@@ -1,5 +1,5 @@
 Requires: pupmod-simp-auditd >= 4.1.0-3
 Requires: pupmod-simp-compliance_markup
-Requires: pupmod-simp-simpcat >= 4.0.0-0
+Requires: pupmod-simp-simpcat >= 6.0.0-0
 Requires: pupmod-simp-simplib >= 1.0.0-0
 Obsoletes: pupmod-sssd-test >= 0.0.1
