@@ -1,3 +1,7 @@
+* Fri Sep 30 2016 Trevor Vaughan <tvaughan@onyxpoint.com> - 5.0.0-0
+- Updated to use the version of 'simpcat' that does not conflict with
+  'puppetlabs/concat'.
+
 * Mon Aug 01 2016 Nicholas Hughes <nicholasmhughes@gmail.com> - 4.1.3-0
 - Fixed incorrect variable references in ldap.erb.
 
